# Quick

./: .gitignore  GITHUB_SCRIPTS.md  README.md  performance_test.py  quick_push.sh  setup_github_token.sh  start_all_systems.sh  start_both_systems.sh  start_mega1.sh  start_mega2.sh  start_mega3.sh  start_mega4.sh  start_mega5.sh  start_mega6.sh  start_mega7.sh  start_mega8.sh  system_check.sh
arduino-mega-dual/: README.md  platformio.ini
arduino-mega-dual/src/: mega1.cpp  mega2.cpp  mega3.cpp  mega4.cpp  mega5.cpp  mega6.cpp  mega7.cpp  mega8.cpp
ros2_ws/src/mega1_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/mega1_control/launch/: mega1_system.launch.py
ros2_ws/src/mega1_control/mega1_control/: m1relay.py  m1sensor.py  mega1_gui.py
ros2_ws/src/mega2_control/: setup.py
ros2_ws/src/mega2_control/launch/: mega2_system.launch.py
ros2_ws/src/mega2_control/mega2_control/: m2relay.py  m2sensor.py  mega2_gui.py
ros2_ws/src/mega2_control/resource/: mega2_control
ros2_ws/src/mega3_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/mega3_control/launch/: mega3_system.launch.py
ros2_ws/src/mega4_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/mega5_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/mega6_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/mega7_control/: package.xml  setup.py
ros2_ws/src/mega8_control/: package.xml  setup.py
ros2_ws/src/mega8_control/mega8_control/: __init__.py  m8relay.py  m8sensor.py  mega8_gui.py
ros2_ws/src/mega8_control/resource/: mega8_control
(+20 files in other folders)
