<?xml version="1.0"?>
<package format="3">
  <name>mega8_control</name>
  <version>0.0.0</version>
  <description>ROS2 control package for Mega8 Arduino system with relay and sensor control via UDP</description>
  <maintainer email="wingfeh@todo.todo">wingfeh</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
